--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -1,6 +1,7 @@
 <%@ page import="com.epam.smyrnov.entity.user.Role" %>
+<c:set var="categories" value="${applicationScope.ItemService.allCategories}"/>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="main.jsp">Shop name</a>
+    <a class="navbar-brand" href="main">Shop name</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -14,8 +15,8 @@
                     Categories
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <c:forEach var="category" items="${applicationScope.ItemService.allCategories}">
-                        <a class="dropdown-item" href="main.jsp">${category}</a>
+                    <c:forEach var="category" items="${categories}">
+                        <a class="dropdown-item" href="main?category=${category.toLowerCase()}">${category}</a>
                     </c:forEach>
                 </div>
             </li>
@@ -32,15 +33,10 @@
                     </div>
                 </li>
             </c:if>
-            <li>
-                <div class="btn-group dropright">
-                    <a href="cart.jsp" class="btn btn-secondary">
-                        Cart
-                    </a>
-                </div>
-            </li>
             <li id="totalPrice">
-                <div><h6>Total price of cart: ${sessionScope.cart.totalPrice}</h6></div>
+                    <a href="cart.jsp" class="btn btn-secondary">
+                        Cart: ${sessionScope.cart.totalPrice} UAH
+                    </a>
             </li>
         </ul>
     </div>
