--- a/web/WEB-INF/jspf/footer.jspf
+++ b/web/WEB-INF/jspf/footer.jspf
@@ -1,5 +1,7 @@
 <footer class="footer">
     <div class="container">
         <span class="text-muted">EPAM Summary Task Summer 2019. All rights and all lefts reserved.</span>
+        <a href="changeLocale?language=en">English</a>
+        <a href="changeLocale?language=ru">Русский</a>
     </div>
 </footer>
