--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -12,25 +12,25 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Admin actions
+                        <fmt:message key="admin.actions"/>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                        <a class="dropdown-item" href="items.jsp">Items</a>
-                        <a class="dropdown-item" href="orders.jsp">Orders</a>
-                        <a class="dropdown-item" href="users.jsp">Users</a>
+                        <a class="dropdown-item" href="items.jsp"><fmt:message key="items"/></a>
+                        <a class="dropdown-item" href="orders.jsp"><fmt:message key="orders"/></a>
+                        <a class="dropdown-item" href="users.jsp"><fmt:message key="users"/></a>
                     </div>
                 </li>
             </c:if>
-            <li id="totalPrice">
-                    <a href="cart.jsp" class="btn btn-secondary">
-                        Cart: ${sessionScope.cart.totalPrice} UAH
+            <li>
+                    <a href="cart.jsp" class="btn btn-secondary" id="totalPrice">
+                        <fmt:message key="cart"/>: ${sessionScope.cart.totalPrice} UAH
                     </a>
             </li>
         </ul>
     </div>
     <div style="text-align: center;" id="alert">
         <c:if test="${sessionScope.user != null and !sessionScope.user.verified}">
-            Your account is not verified. You can't save the order until you'll become verified!
+            <fmt:message key="your.acc.is.not.verified"/>
         </c:if>
     </div>
     <c:choose>
@@ -38,24 +38,24 @@
             <div class="btn-group dropleft">
                 <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
-                    Sign in
+                    <fmt:message key="sign.in"/>
                 </button>
                 <div class="dropdown-menu">
                     <form class="px-4 py-3" action="login" method="post">
                         <div class="form-group">
-                            <label for="exampleDropdownFormEmail1">Email address</label>
+                            <label for="exampleDropdownFormEmail1"><fmt:message key="email"/></label>
                             <input name="email" type="email" class="form-control" id="exampleDropdownFormEmail1"
-                                   placeholder="email@example.com">
+                                   placeholder="email@example.com" required>
                         </div>
                         <div class="form-group">
-                            <label for="exampleDropdownFormPassword1">Password</label>
-                            <input name="password" type="password" class="form-control"
-                                   id="exampleDropdownFormPassword1" placeholder="Password">
+                            <label for="exampleDropdownFormPassword1"><fmt:message key="password"/></label>
+                            <input name="password" type="password" minlength="6" class="form-control"
+                                   id="exampleDropdownFormPassword1" placeholder="Password" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <button type="submit" class="btn btn-primary"><fmt:message key="sign.in"/></button>
                     </form>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="register">New around here? Sign up</a>
+                    <a class="dropdown-item" href="register"><fmt:message key="question.new.here"/></a>
                 </div>
             </div>
         </c:when>
@@ -66,8 +66,8 @@
                         ${sessionScope.user.firstName} ${sessionScope.user.lastName}
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="account">Your account</a>
-                    <a class="dropdown-item" href="exit">Exit</a>
+                    <a class="dropdown-item" href="account"><fmt:message key="account"/></a>
+                    <a class="dropdown-item" href="exit"><fmt:message key="exit"/></a>
                 </div>
             </div>
         </c:otherwise>
