--- a/web/WEB-INF/jspf/taglib.jspf
+++ b/web/WEB-INF/jspf/taglib.jspf
@@ -1,2 +1,7 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core"%>
+<%@ page pageEncoding="UTF-8" contentType="text/html;charset=UTF-8" language="java" %>
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
+<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<c:if test="${sessionScope.currentLocale != null}">
+    <fmt:setLocale value="${sessionScope.currentLocale}" scope="session"/>
+    <fmt:setBundle basename="locale"/>
+</c:if>
